[gd_scene load_steps=26 format=3 uid="uid://j2nuep3bokkk"]

[ext_resource type="Script" uid="uid://mcumi4iyr1fr" path="res://project/player/player.gd" id="1_1p4bd"]
[ext_resource type="Texture2D" uid="uid://c7d4v5qmgbel" path="res://assets/player/Basic Charakter Spritesheet.png" id="2_yjxgs"]
[ext_resource type="PackedScene" uid="uid://cfrbd0rsow3vu" path="res://project/guns/shotgun.tscn" id="3_r42he"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3w37p"]
atlas = ExtResource("2_yjxgs")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd8r7"]
atlas = ExtResource("2_yjxgs")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2kdk"]
atlas = ExtResource("2_yjxgs")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sf7so"]
atlas = ExtResource("2_yjxgs")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hsqcr"]
atlas = ExtResource("2_yjxgs")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i83l1"]
atlas = ExtResource("2_yjxgs")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gwm0"]
atlas = ExtResource("2_yjxgs")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8i8uh"]
atlas = ExtResource("2_yjxgs")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oek3i"]
atlas = ExtResource("2_yjxgs")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l570i"]
atlas = ExtResource("2_yjxgs")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qkwo"]
atlas = ExtResource("2_yjxgs")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2a6gw"]
atlas = ExtResource("2_yjxgs")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lafgl"]
atlas = ExtResource("2_yjxgs")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_agpdq"]
atlas = ExtResource("2_yjxgs")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qd7gd"]
atlas = ExtResource("2_yjxgs")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2oubj"]
atlas = ExtResource("2_yjxgs")
region = Rect2(144, 48, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_0tan8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3w37p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd8r7")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2kdk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sf7so")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hsqcr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i83l1")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gwm0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8i8uh")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oek3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l570i")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qkwo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2a6gw")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lafgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agpdq")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qd7gd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2oubj")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q8b26"]
size = Vector2(9, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4rdqx"]
size = Vector2(15.5, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i2t12"]
size = Vector2(16, 14.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b4ggj"]
size = Vector2(19, 13.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ub51w"]
size = Vector2(20, 14)

[node name="Player" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_1p4bd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -6)
sprite_frames = SubResource("SpriteFrames_0tan8")
animation = &"walk_down"
autoplay = "idle_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_q8b26")
debug_color = Color(0.946036, 5.87195e-06, 0.589682, 0.42)

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -13.0
offset_top = -21.0
offset_right = 122.0
offset_bottom = 9.0
scale = Vector2(0.2, 0.2)

[node name="StaminaBar" type="ProgressBar" parent="."]
offset_left = -7.0
offset_top = 3.0
offset_right = 273.0
offset_bottom = 30.0
scale = Vector2(0.05, 0.05)
show_percentage = false

[node name="Attack_left" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_left"]
position = Vector2(17.25, -5.5)
shape = SubResource("RectangleShape2D_4rdqx")

[node name="Attack_right" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_right"]
position = Vector2(-18, -5.25)
shape = SubResource("RectangleShape2D_i2t12")
debug_color = Color(0.607616, 0.431151, 0.841461, 0.42)

[node name="Attack_down" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_down"]
position = Vector2(0, 9)
shape = SubResource("RectangleShape2D_b4ggj")

[node name="Attack_up" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_up"]
position = Vector2(0, -20)
shape = SubResource("RectangleShape2D_ub51w")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Shotgun" parent="." instance=ExtResource("3_r42he")]
position = Vector2(2, -2)

[node name="Label" type="Label" parent="."]
offset_left = 10.0
offset_right = 74.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 0

[connection signal="body_entered" from="Attack_left" to="." method="on_left"]
[connection signal="body_entered" from="Attack_left" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Attack_left" to="." method="_on_area_2d_body_exited"]
[connection signal="body_exited" from="Attack_left" to="." method="on_left_exited"]
[connection signal="body_entered" from="Attack_right" to="." method="on_right"]
[connection signal="body_exited" from="Attack_right" to="." method="on_right_exited"]
[connection signal="body_entered" from="Attack_down" to="." method="on_down"]
[connection signal="body_exited" from="Attack_down" to="." method="on_down_exited"]
[connection signal="body_entered" from="Attack_up" to="." method="on_up"]
[connection signal="body_exited" from="Attack_up" to="." method="on_up_exited"]
